application_ingress_files/kanban-application-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: app-ingress
  namespace: kanban
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.achebeh.site
    - api.achebeh.site
    secretName: app-tls
  rules:
  - host: app.achebeh.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kanban-application-frontend-svc
            port:
              number: 3000
  - host: api.achebeh.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kanban-application-backend-svc
            port:
              number: 5000
